Add HTML content

--- a/index.html
+++ b/index.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="keywords" content="Rahaf Zourob" />
+    <meta name="description" content="junior Front-end developer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Frontend Mentor | Social links profile</title>
+  </head>
+  <body>
+    <div class="card__links">
+      <header>
+        <div class="avatar">
+          <img src="assets/images/avatar-rahaf.jpg" alt="avatar image" />
+        </div>
+        <h1>Rahaf Zourob</h1>
+        <h3>Palestine, Gaza</h3>
+      </header>
+      <main>
+        <p>"Junior Front-end developer"</p>
+        <ul class="links__list center__content">
+          <li><a href="https://github.com/Rahaf-Zourob">GitHub </a></li>
+          <li>
+            <a href="https://www.frontendmentor.io/profile/Rahaf-Zourob">
+              Frontend Mentor
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/rahaf-zourob-bb7588302/">
+              LinkedIn
+            </a>
+          </li>
+          <li><a href="#"> Twitter </a></li>
+          <li><a href="#">Instagram</a></li>
+        </ul>
+      </main>
+      <footer>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Rahaf</a>.
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
