Linking mobile style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" media="(max-width: 600px)" href="css/mobileStyle.css">
     <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
