--- a/index.html
+++ b/index.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="keywords" content="Rahaf Zourob" />
-    <meta name="description" content="junior Front-end developer" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" media="(max-width: 600px)" href="css/mobileStyle.css">
-    <title>Frontend Mentor | Social links profile</title>
-  </head>
-  <body>
-    <div class="card__links">
-      <header>
-        <div class="avatar">
-          <img src="assets/images/avatar-rahaf.jpg" alt="avatar image" />
-        </div>
-        <h1>Rahaf Zourob</h1>
-        <h3>Palestine, Gaza</h3>
-      </header>
-      <main>
-        <p>"Junior Front-end developer"</p>
-        <ul class="links__list center__content">
-          <li><a href="https://github.com/Rahaf-Zourob">GitHub </a></li>
-          <li>
-            <a href="https://www.frontendmentor.io/profile/Rahaf-Zourob">
-              Frontend Mentor
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/rahaf-zourob-bb7588302/">
-              LinkedIn
-            </a>
-          </li>
-          <li><a href="#"> Twitter </a></li>
-          <li><a href="#">Instagram</a></li>
-        </ul>
-      </main>
-      <footer>
-        <div class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="#">Rahaf</a>.
-        </div>
-      </footer>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="keywords" content="Rahaf Zourob" />
+  <meta name="description" content="junior Front-end developer" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" media="(max-width: 600px)" href="css/mobileStyle.css">
+  <title>Frontend Mentor | Social links profile</title>
+</head>
+
+<body>
+  <div class="card__links">
+    <header>
+      <div class="avatar">
+        <img src="assets/images/avatar-rahaf.jpg" alt="avatar image" />
+      </div>
+      <h1>Rahaf Zourob</h1>
+      <h3>Palestine, Gaza</h3>
+    </header>
+    <main>
+      <p>"Junior Front-end developer"</p>
+      <ul class="links__list center__content">
+        <li><a href="https://github.com/rahafsz/">GitHub </a></li>
+        <li>
+          <a href="https://www.frontendmentor.io/profile/Rahaf-Zourob">
+            Frontend Mentor
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/rahaf-zourob-bb7588302/">
+            LinkedIn
+          </a>
+        </li>
+        <li><a href="#"> Twitter </a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+          href="#">Rahaf</a>.
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
